Added a little styling

--- a/FribergsCarRental/Pages/Index.cshtml
+++ b/FribergsCarRental/Pages/Index.cshtml
@@ -5,6 +5,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Välkommen!</h1>
-    <p>Intresserad av att hyra en bil? Logga in eller skapa ett konto :)</p>
+    <br />  <br /> 
+    <h2>Välkommen till Friberg Car Rentals – din partner för problemfri biluthyrning!</h2><br />
+
+    <p>Upptäck vårt moderna fordonsutbud och flexibla hyresalternativ för att göra varje resa enkel och minnesvärd. <br />
+    Boka din bil idag och upplev friheten!</p> <br />
 </div>
+
+
