--- a/FribergsCarRental/Pages/Cars/CarIndex.cshtml
+++ b/FribergsCarRental/Pages/Cars/CarIndex.cshtml
@@ -3,8 +3,10 @@
 
 @{
     ViewData["Title"] = "CarIndex";
-}
-<h1>Bilar</h1>
+}<br /><br />
+<h3>Fribergs bilar - Logga in eller skapa konto för att hyra</h3>
+<br />
+
 
 <table class="table">
     <thead>
@@ -18,7 +20,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Car[0].PictureURL)
             </th>
-            <th></th>
+         
         </tr>
     </thead>
     <tbody>
@@ -38,19 +40,15 @@
                 @if (User.IsInRole("Admin"))
                 {
                     <td>
-                        <a asp-page="EditCar" asp-route-id="@item.CarId">Edit</a> |
-                        <a asp-page="Details" asp-route-id="@item.CarId">Details</a> |
-                        <a asp-page="DeleteCar" asp-route-id="@item.CarId">Delete</a> |
+                        <a asp-page="EditCar" asp-route-id="@item.CarId">Ändra</a> |                      
+                        <a asp-page="DeleteCar" asp-route-id="@item.CarId">Ta bort</a> |
                     </td>
                 }
               
             </tr>
-        }
-
+        }     
     </tbody>
 </table>
-
-
 
 
 @section Scripts {
