--- a/FribergsCarRental/Pages/Bookings/BookingIndex.cshtml
+++ b/FribergsCarRental/Pages/Bookings/BookingIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@* @page
 @model FribergsCarRental.Pages.Bookings.BookingIndexModel
 
 @{
@@ -64,5 +64,56 @@
 }
 
 
+ *@
 
+@page
+@model FribergsCarRental.Pages.Bookings.BookingIndexModel
 
+@{
+    ViewData["Title"] = "BookingIndex";
+}
+
+<h3>Är du säker på att du vill radera bokningen?</h3>
+<div>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Booking.TheUser)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Booking.TheUser.FirstName)
+            @Html.DisplayFor(model => model.Booking.TheUser.LastName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Booking.Car)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Booking.Car.Brand)
+            @Html.DisplayFor(model => model.Booking.Car.Model)
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Booking.StartDate)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Booking.StartDate)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Booking.EndDate)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Booking.EndDate)
+        </dd>
+    </dl>
+
+    <form method="post">
+        <input type="hidden" asp-for="Booking.BookingId" />
+        <input type="submit" value="Delete" class="btn btn-danger" />
+    </form>
+</div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
