--- a/FribergsCarRental/Pages/Users/AdminCarIndex.cshtml
+++ b/FribergsCarRental/Pages/Users/AdminCarIndex.cshtml
@@ -38,9 +38,9 @@
                 @Html.DisplayFor(modelItem => item.PictureURL)
             </td>
             <td>
-                <a asp-page="/Cars/EditCar" asp-route-id="@item.CarId">Edit</a> |
+                <a asp-page="/Cars/EditCar" asp-route-id="@item.CarId">Ändra</a> |
                 <a asp-page="/Cars/Details" asp-route-id="@item.CarId">Details</a> |
-                <a asp-page="/Cars/DeleteCar" asp-route-id="@item.CarId">Delete</a>
+                <a asp-page="/Cars/DeleteCar" asp-route-id="@item.CarId">Radera</a>
             </td>
         </tr>
 }
