Added Cars to Admins shared

--- a/FribergsCarRental/Pages/Shared/_Layout.cshtml
+++ b/FribergsCarRental/Pages/Shared/_Layout.cshtml
@@ -47,6 +47,9 @@
                         <a class="navigationlink" asp-area="" asp-page="/Users/AdminPage">MINA SIDOR</a>
                     </li>
                     <li>
+                        <a class="navigationlink" asp-area="" asp-page="/Users/AdminCarIndex">BILAR</a>
+                    </li>
+                    <li>
                         <a class="navigationlink" asp-area="" asp-page="/Users/Login">LOGGA UT</a>
                     </li>
                 }
