--- a/FribergsCarRental/Pages/Bookings/CustomersBookingIndex.cshtml
+++ b/FribergsCarRental/Pages/Bookings/CustomersBookingIndex.cshtml
@@ -21,6 +21,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Booking[0].EndDate)
             </th>
+            <th>
+                Boknings-ID
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -43,13 +46,16 @@
                     @Html.DisplayFor(modelItem => item.EndDate)
                 </td>
                 <td>
+                    @Html.DisplayFor(modelItem => item.BookingId)
+                </td>
+               <td>
                     @if (item.StartDate > DateTime.Now)
                     {
                         <form method="post" asp-page-handler="Delete" asp-route-id="@item.BookingId">
                             <button type="submit" value="Delete" class="btn btn-danger">Ta bort</button>
                         </form>
                     }
-                </td>         
+                </td>
             </tr>
         }
     </tbody>
