--- a/FribergsCarRental/Pages/Bookings/CreateBooking.cshtml
+++ b/FribergsCarRental/Pages/Bookings/CreateBooking.cshtml
@@ -25,7 +25,7 @@
         <span asp-validation-for="Booking.EndDate" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
+        <input type="submit" value="Boka" class="btn btn-primary" />
     </div>
 </form>
 
